--- a/NuGet.config
+++ b/NuGet.config
@@ -4,4 +4,10 @@
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="github" value="https://nuget.pkg.github.com/MateuSerafim/index.json" />
   </packageSources>
+  <packageSourceCredentials>
+    <github>
+      <add key="Username" value="%GH_USERNAME%" />
+      <add key="ClearTextPassword" value="%GH_TOKEN%" />
+    </github>
+  </packageSourceCredentials>
 </configuration>
