--- a/BaseValueObjects/BaseValueObjects.csproj
+++ b/BaseValueObjects/BaseValueObjects.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Rodovia.BaseValueObjects</PackageId>
+    <Authors>MateuSerafim</Authors>
+    <Description>Library to model value objects.</Description>
   </PropertyGroup>
 
   <ItemGroup>
